// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form elements form success message 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-m0o3up"
      >
        <div
          class="css-1azbljw"
        >
          test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`form elements form success title 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <div
        class="css-m0o3up"
      >
        <div
          aria-level="1"
          class="css-192x0ed"
          role="heading"
        >
          <div
            class="css-1vyax5l"
          >
            hi
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkbox field 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="css-m0o3up"
        >
          <div
            class="field-container css-jblfrf"
          >
            <label
              class="is-default css-1r5s3tb"
            >
              <div
                class="css-vurnku"
              >
                <input
                  aria-checked="false"
                  class="css-xyotvu"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="is-default css-1bg6idj"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="is-default css-4amxue"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              Label
            </label>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkboxes field 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div>
          <div
            class="css-m0o3up"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-1r5s3tb"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1bg6idj"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-4amxue"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                foo
              </label>
            </div>
          </div>
          <div
            class="css-m0o3up"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-1r5s3tb"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1bg6idj"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-4amxue"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                bar
              </label>
            </div>
          </div>
          <div
            class="css-m0o3up"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-1r5s3tb"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1bg6idj"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-4amxue"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                fuzz
              </label>
            </div>
          </div>
          <div
            class="css-m0o3up"
          >
            <div
              class="field-container css-jblfrf"
            >
              <label
                class="is-default css-1r5s3tb"
              >
                <div
                  class="css-vurnku"
                >
                  <input
                    aria-checked="false"
                    class="css-xyotvu"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default css-1bg6idj"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default css-4amxue"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                qux
              </label>
            </div>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields password field 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default css-1vjef0r"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default css-1a159uv"
              type="button"
            >
              <span
                class="css-15o6gnw"
              >
                <div
                  class="css-1iqd8s3"
                >
                  Select an option
                </div>
              </span>
              <span
                aria-hidden="true"
                class="css-1yxvfaj"
              >
                <svg
                  class="mdi-icon css-9y7ajs"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field with default 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-jblfrf"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default css-1vjef0r"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default css-1a159uv"
              type="button"
            >
              <span
                class="css-15o6gnw"
              >
                <div
                  class="css-1iqd8s3"
                >
                  Select an option
                </div>
              </span>
              <span
                aria-hidden="true"
                class="css-1yxvfaj"
              >
                <svg
                  class="mdi-icon css-9y7ajs"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format email 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format uri 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field regular 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with custom errors as sentence 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-error css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-error css-1vjef0r"
          >
            <input
              class="is-error css-zad3la"
              value=""
            />
          </div>
          <div
            class="is-error css-qkmpma"
            role="status"
          >
            Should be string, Blah
          </div>
        </div>
        <button
          class="is-focused css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with help text 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              value=""
            />
          </div>
          <div
            class="is-default css-qkmpma"
            role="status"
          >
            help text
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with markdown errors 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Test
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with placeholder 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <input
              class="is-default css-zad3la"
              placeholder="placeholder"
              value=""
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields textarea field 1`] = `
<DocumentFragment>
  <div
    class="css-1qe3vap-PageWrapper"
  >
    <div
      class="css-1otsgan-FormWrapper"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container css-15nhbbq"
          rows="2"
        >
          <label
            class="is-default css-dzfozd"
          >
            Label
          </label>
          <div
            class="is-default css-1vjef0r"
          >
            <textarea
              class="is-default css-lwvz9e"
              rows="2"
            />
          </div>
        </div>
        <button
          class=" css-fl4xzn"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
